tests/ui/privacy/missing-mir-priv-bounds-3.stderr
error: missing optimized MIR for `dep::m::Unreachable::generic::<i32>` in the crate `missing_mir_priv_bounds_extern_3`
   |
note: missing optimized MIR for this item (was the crate `missing_mir_priv_bounds_extern_3` compiled with `--emit=metadata`?)
  --> $DIR/auxiliary/missing-mir-priv-bounds-extern-3.rs:30:9
   |
LL |         pub fn generic<T>() {}
   |         ^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <Handler as SubHandler>::handle::<dep::Dummy>`
  --> $DIR/auxiliary/missing-mir-priv-bounds-extern-3.rs:20:5
   |
LL |     <T as SubHandler>::handle::<Dummy>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

